[package]
name = "neural-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
flate2 = "1.0"
byteorder = "1.0"
ndarray = { version = "0.12" }
# blas-src = { version = "0.2.0", default-features = false, features = [
#     "openblas",
# ] }
# openblas-src = { version = "0.6.0", default-features = false, features = [
#     "cblas",
#     "system",
# ] }
